RESOLVED FIXED106839
RenderListItem does not need to override computePreferredLogicalWidth
https://bugs.webkit.org/show_bug.cgi?id=106839
Summary RenderListItem does not need to override computePreferredLogicalWidth
Ojan Vafai
Reported 2013-01-14 16:09:51 PST
RenderListItem does not need to override computePreferredLogicalWidth
Attachments
Patch (2.05 KB, patch)
2013-01-14 16:12 PST, Ojan Vafai
no flags
Ojan Vafai
Comment 1 2013-01-14 16:12:45 PST
Levi Weintraub
Comment 2 2013-01-14 17:02:38 PST
Comment on attachment 182648 [details] Patch Ok.
WebKit Review Bot
Comment 3 2013-01-14 17:20:40 PST
Comment on attachment 182648 [details] Patch Clearing flags on attachment: 182648 Committed r139693: <http://trac.webkit.org/changeset/139693>
WebKit Review Bot
Comment 4 2013-01-14 17:20:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.