RenderListItem does not need to override computePreferredLogicalWidth https://bugs.webkit.org/show_bug.cgi?id=106839

Reviewed by Levi Weintraub.

Apparently there was a time when the list marker was considered part of
the list item's preferred width, but that is no longer the case.
This code was added in r3421. The code around preferred widths has change
a lot since then.

* rendering/RenderListItem.cpp:
* rendering/RenderListItem.h:


git-svn-id: svn://svn.chromium.org/blink/trunk@139693 bbb929c8-8fbe-4397-9dbb-9b2b20218538