third_party/WebKit/Source/WebCore/rendering/RenderListItem.cpp
@@ -275,15 +275,6 @@ void RenderListItem::updateMarkerLocation()
     }
 }
 
-void RenderListItem::computePreferredLogicalWidths()
-{
-    ASSERT(preferredLogicalWidthsDirty());
-    
-    updateMarkerLocation();
-
-    RenderBlock::computePreferredLogicalWidths();
-}
-
 void RenderListItem::layout()
 {
     StackStats::LayoutCheckPoint layoutCheckPoint;
