third_party/WebKit/Source/WebCore/rendering/RenderListItem.h
@@ -66,7 +66,6 @@ private:
     virtual void paint(PaintInfo&, const LayoutPoint&);
 
     virtual void layout();
-    virtual void computePreferredLogicalWidths();
 
     void positionListMarker();
 
